Added defect/story status badges to index and report page. Added defect and story count gadgets to index page.

--- a/src/main/resources/templates/asset.html
+++ b/src/main/resources/templates/asset.html
@@ -310,7 +310,19 @@
               <i class="bi bi-circle"></i><span>Asset Report</span>
             </a>
           </li>
-
+					
+					<li>
+						<a th:href="@{/defect}">
+							<i class="bi bi-circle"></i><span>Defects</span>
+						</a>
+					</li>
+					
+					<li>
+						<a th:href="@{/userstory}">
+							<i class="bi bi-circle"></i><span>User Stories</span>
+						</a>
+					</li>
+					
 				</ul>
 			</li><!-- End Resources Nav -->
 
