--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,15 @@
   <link href="assets/vendor/quill/quill.bubble.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
+  <path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
+  <path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z"/>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pooper.js/1.14.7/umd/pooper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+</svg>
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -339,7 +348,7 @@
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>People</span><i class="bi bi-chevron-down ms-auto"></i>
+          <i class="bi bi-layout-text-window-reverse"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
@@ -349,7 +358,7 @@
           </li>
           <li>
             <a th:href="@{/userstory}">
-              <i class="bi bi-circle"></i><span>Tickets</span>
+              <i class="bi bi-circle"></i><span>CCS</span>
             </a>
           </li>
           <li>
@@ -359,29 +368,10 @@
           </li>
           <li>
             <a th:href="@{/assetreport}">
-              <i class="bi bi-circle"></i><span>Reports</span>
+              <i class="bi bi-circle"></i><span>CCS Reports</span>
             </a>
           </li>
-          <li>
-            <a th:href="@{/client}">
-              <i class="bi bi-circle"></i><span>Clients</span>
-            </a>
-          </li>
-          <li>
-            <a th:href="@{/supplier}">
-              <i class="bi bi-circle"></i><span>Suppliers</span>
-            </a>
-          </li>
-          <li>
-            <a th:href="@{/contact}">
-              <i class="bi bi-circle"></i><span>Contacts</span>
-            </a>
-          </li>
-          <li>
-            <a th:href="@{/user}">
-              <i class="bi bi-circle"></i><span>Users</span>
-            </a>
-          </li>
+          
         </ul>
       </li><!-- End People Nav -->
       
@@ -507,11 +497,11 @@
       <div class="row">
 
         <!-- Left side columns -->
-        <div class="col-lg-8">
+        <div class="col-lg-12">
           <div class="row">
 
             <!-- Sales Card -->
-            <div class="col-xxl-4 col-md-6">
+            <div class="col-xxl-4 col-md-12">
               <div class="card info-card sales-card">
 
                 <div class="filter">
@@ -521,22 +511,22 @@
                       <h6>Filter</h6>
                     </li>
 
-                    <li><a class="dropdown-item" href="#">Today</a></li>
+                    <li><a class="dropdown-item" th:href="@{/index}">Today</a></li>
                     <li><a class="dropdown-item" href="#">This Month</a></li>
                     <li><a class="dropdown-item" href="#">This Year</a></li>
                   </ul>
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Sales <span>| Today</span></h5>
+                  <h5 class="card-title">Defects <span>| Overall</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
+                      <i class="bi bi-bug-fill"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>145</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+                    <h6 id="defectcount"></h6>
+                      <span class="text-success small pt-1 fw-bold">Filter</span> <span class="text-muted small pt-2 ps-1">in process</span>
 
                     </div>
                   </div>
@@ -546,7 +536,7 @@
             </div><!-- End Sales Card -->
 
             <!-- Revenue Card -->
-            <div class="col-xxl-4 col-md-6">
+           <div class="col-xxl-4 col-md-6">
               <div class="card info-card revenue-card">
 
                 <div class="filter">
@@ -563,15 +553,16 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Revenue <span>| This Month</span></h5>
+                  <h5 class="card-title">User Stories <span>| Overall</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-currency-dollar"></i>
+                      <i class="bi bi-book"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>$3,264</h6>
-                      <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+                   
+                      <h6 id="storycount"></h6>
+                      <span class="text-success small pt-1 fw-bold">Filter</span> <span class="text-muted small pt-2 ps-1">in process</span>
 
                     </div>
                   </div>
@@ -618,14 +609,14 @@
             </div><!-- End Customers Card -->
 
             <!-- Reports -->
-            <div class="col-12">
+            <div class="col-10">
               <div class="card">
 
                 <!-- https://www.bugatti.com/fileadmin/_processed_/sei/p1/se-image-e273a881495acbebe4fc6f0a150b8678.jpg-->
 <!-- Background image -->
 <div class="bg-image" 
      style="background-image: url('https://wallpapercave.com/wp/wp3609342.jpg');
-             height: 85vh">
+             height: 95vh">
 </div>
 <!-- Background image -->
               </div>
@@ -649,56 +640,53 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Recent Sales <span>| Today</span></h5>
+                  <h5 class="card-title">Defects <span> </span></h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Customer</th>
-                        <th scope="col">Product</th>
-                        <th scope="col">Price</th>
+                        <th scope="col">Summary</th>
+                        <th scope="col">Reporter</th>
+                        <th scope="col">Asignee</th>
                         <th scope="col">Status</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <th scope="row"><a href="#">#2457</a></th>
-                        <td>Brandon Jacob</td>
-                        <td><a href="#" class="text-primary">At praesentium minu</a></td>
-                        <td>$64</td>
-                        <td><span class="badge bg-success">Approved</span></td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><a href="#">#2147</a></th>
-                        <td>Bridie Kessler</td>
-                        <td><a href="#" class="text-primary">Blanditiis dolor omnis similique</a></td>
-                        <td>$47</td>
-                        <td><span class="badge bg-warning">Pending</span></td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><a href="#">#2049</a></th>
-                        <td>Ashleigh Langosh</td>
-                        <td><a href="#" class="text-primary">At recusandae consectetur</a></td>
-                        <td>$147</td>
-                        <td><span class="badge bg-success">Approved</span></td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><a href="#">#2644</a></th>
-                        <td>Angus Grady</td>
-                        <td><a href="#" class="text-primar">Ut voluptatem id earum et</a></td>
-                        <td>$67</td>
-                        <td><span class="badge bg-danger">Rejected</span></td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><a href="#">#2644</a></th>
-                        <td>Raheem Lehner</td>
-                        <td><a href="#" class="text-primary">Sunt similique distinctio</a></td>
-                        <td>$165</td>
-                        <td><span class="badge bg-success">Approved</span></td>
-                      </tr>
+                    <tr th:each="detail:${defectdetails}">
+                    <td th:text="${detail.id}"></td>
+                    <td th:text="${detail.summary}"></td>
+                    <td th:text="${detail.reporter}"></td>
+                    <td th:text="${detail.asignee}"></td>
+                    
+                    <td>
+                   <!-- <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#editModal" id="editButton" data-bs-whatever="@mdo">Edit</button> -->
+                   <div  th:switch="${detail.status}">
+                   <span th:case= "'New'">
+                   <span class="badge bg-secondary">New</span>
+                   </span>
+                   <span th:case= "'In Progress'">
+                   <span class="bbadge bg-info text-dark">In Progress</span>
+                   </span>
+                   <span th:case= "'Completed'">
+                   <span class="badge bg-success">Completed</span>
+                   </span>
+                   <span th:case= "'On hold'">
+                   <span class="badge bg-warning text-dark">On hold</span>
+                   </span>
+                   <span th:case= "'Obsolute'">
+                   <span class="badge bg-danger">Obsolute</span>
+                   </span>
+                   </div>
+                   
+                    </td>
+                    
+                  </tr>
+                      
                     </tbody>
                   </table>
+
+                </div>
 
                 </div>
 
@@ -706,7 +694,7 @@
             </div><!-- End Recent Sales -->
 
             <!-- Top Selling -->
-            <div class="col-12">
+           <!-- <div class="col-12">
               <div class="card top-selling">
 
                 <div class="filter">
@@ -777,7 +765,7 @@
                 </div>
 
               </div>
-            </div><!-- End Top Selling -->
+            </div> --><!-- End Top Selling -->
 
           </div>
         </div><!-- End Left side columns -->
@@ -857,6 +845,8 @@
 
             </div>
           </div><!-- End Recent Activity -->
+
+
 
           <!-- Budget Report -->
           <div class="card">
@@ -1011,7 +1001,7 @@
           </div><!-- End Website Traffic -->
 
           <!-- News & Updates Traffic -->
-          <div class="card">
+         <!-- <div class="card">
             <div class="filter">
               <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
               <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -1059,10 +1049,10 @@
                   <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
                 </div>
 
-              </div><!-- End sidebar recent posts-->
+              </div>
 
             </div>
-          </div><!-- End News & Updates -->
+          </div> --> <!-- End News & Updates -->
 
         </div><!-- End Right side columns -->
 
@@ -1096,9 +1086,11 @@
   <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
   <script src="assets/vendor/tinymce/tinymce.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+<script src="assets/js/index.js"></script>
 
 </body>
 
