--- a/src/main/resources/templates/defect.html
+++ b/src/main/resources/templates/defect.html
@@ -385,7 +385,7 @@
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>People</span><i class="bi bi-chevron-down ms-auto"></i>
+          <i class="bi bi-layout-text-window-reverse"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
@@ -399,7 +399,7 @@
       
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-bar-chart"></i><span>Reports</span><i class="bi bi-chevron-down ms-auto"></i>
+          <i class="bi bi-bar-chart"></i><span>CCS Reports</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
@@ -408,7 +408,7 @@
             </a>
           </li>
           <li>
-            <a href="@{/defectreport}">
+            <a th:href="@{/defectreport}">
               <i class="bi bi-circle"></i><span>Defect Reports</span>
             </a>
           </li>
@@ -496,7 +496,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>User Stories</h1>
+      <h1>Defects</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -520,7 +520,7 @@
             </div>
               <h5 class="card-title">Availabel Records</h5>
               
-              <table class="table table-hover">
+              <table class="table table-striped table-hover datatable">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -579,24 +579,23 @@
         <input class="btn btn-outline-success" type="submit"></input>
       </form>
      <div>
-     <table class="table table-hover" id="byCapital">
+     <table class=" table table-striped table-hover datatable">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
                     <th scope="col">Defect</th>
                     <th scope="col">Sprint</th>
-                    <th scope="col">User Story</th>
                     <th scope="col">Status</th>
-                    <th scope="col">Actions</th>
+                    <th scope="col">Reporter</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr th:each="def:${filteredDefects}">
-                    <td th:text="${def.id}"></td>
-                    <td th:text="${def.summary}"></td>
-                    <td th:text="${def.sprint}"></td>
-                    <td th:text=${def.status}></td>
-                    <td th:text=${def.description}></td>
+                  <tr th:each="cap:${filteredDefects}">
+                    <td th:text="${cap.id}"></td>
+                    <td th:text="${cap.summary}"></td>
+                    <td th:text="${cap.sprint}"></td>
+                    <td th:text=${cap.status}></td>
+                    <td th:text=${cap.asignee}></td>
                   </tr>
                 </tbody>
               </table> 
